# sbox

./: .gitmodules  CMakeLists.txt  makefile  meson.build
src/: main.cpp
src/engine/: bootstrap.hpp  library.hpp  rendering.hpp  vertex.hpp
src/shaders/: shader.vert
src/utils/: defer.hpp  utils.hpp
